--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryAndroidApp">
         <activity
+            android:name=".activities.ProductsActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.HomeActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -27,8 +31,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GroceryAndroidApp.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.GroceryAndroidApp.NoActionBar"></activity>
     </application>
 
 </manifest>
