--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GroceryAndroidApp">
         <activity
+            android:name=".activities.DetailActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.ProductsActivity"
             android:exported="true" />
         <activity
@@ -31,7 +34,7 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GroceryAndroidApp.NoActionBar"></activity>
+            android:theme="@style/Theme.GroceryAndroidApp.NoActionBar" />
     </application>
 
 </manifest>
